--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,7 +1,12 @@
 :root {
   --primary-color: #ff9654;
+  --primary-font-color: #7E8489;
 }
 
 body {
   font-size: 16px;
+}
+
+.section-pad {
+  padding: 10px 15px;
 }
