--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #ff9654;
   --primary-font-color: #7E8489;
+  --theme-linear-gradient: linear-gradient(90deg, #fa8c1d, #fcaf3f)
 }
 
 body {
